# endpoints-supervisor

./: Cargo.toml  README.md
src/: json_handler.rs  main.rs  status.rs
src/json_handler/: config.rs  endpoints.rs  mail.rs
src/status/: mod.rs  tcp.rs
