[package]
edition = "2018"
name = "endpoint-supervisior"
version = "1.0.0-alpha"

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
directories = "4.0.0"
lettre = "0.10.0-rc.3"
